samples/_failures_safe/1761537126_713e8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fdc593c8.c: In function ‘main’:
./samples/SAFE/__tmp_fdc593c8.c:172:17: error: expected ‘;’ at end of input
  172 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_fdc593c8.c:172:9: error: expected declaration or statement at end of input
  172 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_fdc593c8.c:172:9: error: expected declaration or statement at end of input
